✏️ Prevent ber spua from breaking separately

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -39,7 +39,7 @@ accompanied by new vocabulary, relevant jargon, and example sentences.
 
 - [Mia Entropy](https://github.com/mia-entropy), Eberban architect
 - [Zmavli Caimle](https://github.com/Zmavli), whose work on aberbanbju inspired this project
-- The [ber spua](https://discord.gg/FChFEHEet8) Discord server
+- The [ber&nbsp;spua](https://discord.gg/FChFEHEet8) Discord server
 - Past, present, and future contributors
 
 </SiteLayout>
