✨ Add dark-mode, responsive header, chapter nav
💄 Responsive sticky header hides on scroll-down

    Position sticky only works on a fixed parent.
    Scroll event only works when the parent is not fixed.

    Thus, a new div was made to encapsulate the actual content.

✨ Add prev and next buttons

💄 Change title depending on page

🏷️ Give types to all Astro props

✨ Add ChapterNav

    This one was really tricky. I've ended up coupling SiteLayout and
    ChapterNav even more by having them use "slide-in-show" class.

💄 Add dark mode

💄 Add responsive sticky header

    A sticky child with an overflowing parent only works
    when said parent has a fixed height.

🚚 Rename Block to Info

    Use of this block class interfered with display: block

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,14 +1,14 @@
-import Block from "../components/Block.astro";
+import Info from "../components/Info.astro";
 
 {/* For some reason, the css only renders when SiteLayout is rendered like so */}
 import SiteLayout from "../layouts/SiteLayout.astro";
 
-<SiteLayout title="So, what is Learn Eberban?">
+<SiteLayout chapter={0} title="So, what is Learn Eberban?">
 
-<Block type="warning" title="Work In Progress">
+<Info type="warning" title="Work In Progress">
     As Eberban is a work in progress, so is this course. Expect changes until
     this warning goes away.
-</Block>
+</Info>
 
 This course teaches Eberban up to an intermediate level. If, after having
 completed this course, you were teleported to Eberstan (the country of the
