--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,6 +1,6 @@
 import Info from "../components/Info.astro";
 
-{/* For some reason, the css only renders when SiteLayout is rendered like so */}
+{/* For some reason, the css only renders when SiteLayout is rendered like so: */}
 import SiteLayout from "../layouts/SiteLayout.astro";
 
 <SiteLayout chapter={0} title="So, what is Learn Eberban?">
