📱 Add &nbsp; to links and fix latex linebreaks

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,7 +14,7 @@ This course teaches Eberban up to an intermediate level. If, after having
 completed this course, you were teleported to Eberstan (the country of the
 Eberbanic people), then you would blend in just fine. For further technical
 coverage, see the
-[Reference Grammar](https://eberban.github.io/eberban/books/refgram/book/index.html).
+[Reference&nbsp;Grammar](https://eberban.github.io/eberban/books/refgram/book/index.html).
 
 Official resources and the goals of Eberban are located
 [here](https://eberban.github.io/eberban/).
@@ -37,8 +37,8 @@ accompanied by new vocabulary, relevant jargon, and example sentences.
 
 ## Credits
 
-- [Mia Entropy](https://github.com/mia-entropy), Eberban architect
-- [Zmavli Caimle](https://github.com/Zmavli), whose work on aberbanbju inspired this project
+- [Mia&nbsp;Entropy](https://github.com/mia-entropy), Eberban architect
+- [Zmavli&nbsp;Caimle](https://github.com/Zmavli), whose work on aberbanbju inspired this project
 - The [ber&nbsp;spua](https://discord.gg/FChFEHEet8) Discord server
 - Past, present, and future contributors
 
