📝 Reduce words and clarify the course
Why did I relocate the link in the index page?
Because https://sketchplanations.com/click-here

--- a/src/components/MorphologySymbols.mdx
+++ b/src/components/MorphologySymbols.mdx
@@ -12,8 +12,8 @@
 |                     `u`                    | The letter u                                                                         |
 |                     `i`                    | The letter i                                                                         |
 |                     `V`                    | Vowel                                                                                |
-|                    `V-i`                   | Any vowel except the letter i                                                        |
-|                    `V-u`                   | Any vowel except the letter u                                                        |
+|                   `(V-i)`                  | Any vowel except the letter i                                                        |
+|                   `(V-u)`                  | Any vowel except the letter u                                                        |
 |                     `V̌`                    | Vhowel                                                                               |
 |                     `B`                    | Boundary: either space or `'`                                                        |
 |                     `\|`                   | Or                                                                                   |
