--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,14 +10,11 @@ import SiteLayout from "../layouts/SiteLayout.astro";
     this warning goes away.
 </Info>
 
-This course teaches Eberban up to an intermediate level. If, after having
-completed this course, you were teleported to Eberstan (the country of the
-Eberbanic people), then you would blend in just fine. For further technical
-coverage, see the
+This course teaches [Eberban](https://eberban.github.io/eberban/) up to an
+intermediate level. If, after having completed this course, you were teleported
+to Eberstan (the country of the Eberbanic people), then you would blend in just
+fine. For further technical coverage, see the
 [Reference&nbsp;Grammar](https://eberban.github.io/eberban/books/refgram/book/index.html).
-
-Official resources and the goals of Eberban are located
-[here](https://eberban.github.io/eberban/).
 
 ## Who is this for?
 
